[package]
name = "verification"
version = "0.1.0"
authors = ["Nikolay Volf <nikvolf@gmail.com>"]
edition = "2018"

[dependencies]
time = "0.1"
bigint = "1.0"
lazy_static = "1.0"
log = "0.4"
rayon = "1.0"
parking_lot = "0.4"
primitives = { path = "../primitives" }
chain = { path = "../chain"  }
serialization = { path = "../serialization" }
script = { path = "../script" }
network = { path = "../network" }
storage = { path = "../storage" }
bitcrypto = { path = "../crypto" }

[dev-dependencies]
test-data = { path = "../test-data" }
db = { path = "../db" }
